Updated to Qiskit 1.0.2

--- a/Gaussian_Transformation.ipynb
+++ b/Gaussian_Transformation.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOXzUywhEI6EA0KtJqWmdod",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/MonitSharma/Learn-Quantum-Machine-Learning/blob/main/Gaussian_Transformation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Wo8gh7fA0CM9"
+      },
       "source": [
         "# Gaussian Transformation\n",
         "\n",
@@ -35,13 +22,13 @@
         "\n",
         "\n",
         "Read [this](https://strawberryfields.readthedocs.io/en/latest/) documentation to learn more on it."
-      ],
-      "metadata": {
-        "id": "Wo8gh7fA0CM9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "b2cDyZU00Uzh"
+      },
       "source": [
         "## The quantum circuit\n",
         "----\n",
@@ -72,127 +59,121 @@
         "\n",
         "----\n",
         "Our aim here is to optimize the circuit parameters $(\\alpha, \\phi)$ such that the mean photon number is equal to one. The rotating gate is actually a *passive transformation*, meaning that it does not change the energy of the system. The displacement gate is an *active transformation*, which modifies the energy of the photonic system."
-      ],
-      "metadata": {
-        "id": "b2cDyZU00Uzh"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "v1rphGsv17TA"
+      },
       "source": [
         "## Constructing the QNode\n",
         "\n",
         "Import Pennylane and NumPy"
-      ],
-      "metadata": {
-        "id": "v1rphGsv17TA"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pennylane as qml\n",
-        "from pennylane import numpy as np"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "X5PQCKxW0fv1"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import pennylane as qml\n",
+        "from pennylane import numpy as np"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Next, we instantiate a device which will be used to evaluate the circuit. Because our circuit contains only Gaussian operations, we can make use of the built-in `default.gaussian` device."
-      ],
       "metadata": {
         "id": "fIqx_6Ve2D1Y"
-      }
+      },
+      "source": [
+        "Next, we instantiate a device which will be used to evaluate the circuit. Because our circuit contains only Gaussian operations, we can make use of the built-in `default.gaussian` device."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dev_gaussian = qml.device(\"default.gaussian\", wires=1)"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "oeoFDYCd2BYe"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dev_gaussian = qml.device(\"default.gaussian\", wires=1)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "After initializing the device, we can construct our quantum node. As before, we use the `qnode()` to convert our quantum function (encoded by the circuit above) into a quantum node running on the `default.gaussian` device."
-      ],
       "metadata": {
         "id": "aRy5muAV2LHr"
-      }
+      },
+      "source": [
+        "After initializing the device, we can construct our quantum node. As before, we use the `qnode()` to convert our quantum function (encoded by the circuit above) into a quantum node running on the `default.gaussian` device."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "WeTUdD1w2JVo"
+      },
+      "outputs": [],
       "source": [
         "@qml.qnode(dev_gaussian)\n",
         "def mean_photon_gaussian(mag_alpha, phase_alpha, phi):\n",
         "    qml.Displacement(mag_alpha, phase_alpha, wires=0)\n",
         "    qml.Rotation(phi, wires=0)\n",
         "    return qml.expval(qml.NumberOperator(0))"
-      ],
-      "metadata": {
-        "id": "WeTUdD1w2JVo"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "W2H_pYWr2TC5"
+      },
       "source": [
         "Notice that we have broken up the complex number $α$\n",
         " into two real numbers `mag_alpha` and `phase_alpha`, which form a polar representation of $α$\n",
         ". This is so that the notion of a gradient is clear and well-defined."
-      ],
-      "metadata": {
-        "id": "W2H_pYWr2TC5"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "G2SWZbav2ZcG"
+      },
       "source": [
         "## Optimization\n",
         "\n",
         "As in the [qubit rotation](https://colab.research.google.com/github/MonitSharma/Learn-Quantum-Machine-Learning/blob/main/Qubit_Rotation.ipynb) tutorial, let’s now use one of the built-in PennyLane optimizers in order to optimize the quantum circuit towards the desired output. We want the mean photon number to be exactly one, so we will use a squared-difference cost function:"
-      ],
-      "metadata": {
-        "id": "G2SWZbav2ZcG"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def cost(params):\n",
-        "    return (mean_photon_gaussian(params[0], params[1], params[2]) - 1.0) ** 2\n"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "K9bFyeE52RNr"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def cost(params):\n",
+        "    return (mean_photon_gaussian(params[0], params[1], params[2]) - 1.0) ** 2\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "At the beginning of the optimization, we choose arbitrary small initial parameters:"
-      ],
       "metadata": {
         "id": "MtuCyrtk2mYZ"
-      }
+      },
+      "source": [
+        "At the beginning of the optimization, we choose arbitrary small initial parameters:"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "init_params = np.array([0.015, 0.02, 0.005], requires_grad=True)\n",
-        "print(cost(init_params))"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -200,19 +181,25 @@
         "id": "Q4d1C6dw2kcT",
         "outputId": "a0c748c6-9618-4036-8140-c368c6056f8c"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0.9995500506249999\n"
           ]
         }
+      ],
+      "source": [
+        "init_params = np.array([0.015, 0.02, 0.005], requires_grad=True)\n",
+        "print(cost(init_params))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "V6ngLFOe2qxz"
+      },
       "source": [
         "When the gate parameters are near to zero, the gates are close to the identity transformation, which leaves the initial state largely unchanged. Since the initial state contains no photons, the mean photon number of the circuit output is approximately zero, and the cost is close to one.\n",
         "\n",
@@ -224,32 +211,11 @@
         "Now, let’s use the `GradientDescentOptimizer`, and update the circuit parameters over 100 optimization steps.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "V6ngLFOe2qxz"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# initialise the optimizer\n",
-        "opt = qml.GradientDescentOptimizer(stepsize=0.1)\n",
-        "\n",
-        "# set the number of steps\n",
-        "steps = 20\n",
-        "# set the initial parameter values\n",
-        "params = init_params\n",
-        "\n",
-        "for i in range(steps):\n",
-        "    # update the circuit parameters\n",
-        "    params = opt.step(cost, params)\n",
-        "\n",
-        "    print(\"Cost after step {:5d}: {:8f}\".format(i + 1, cost(params)))\n",
-        "\n",
-        "print(\"Optimized mag_alpha:{:8f}\".format(params[0]))\n",
-        "print(\"Optimized phase_alpha:{:8f}\".format(params[1]))\n",
-        "print(\"Optimized phi:{:8f}\".format(params[2]))"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -257,11 +223,10 @@
         "id": "h5Wi_2AA2olc",
         "outputId": "3c61c917-2ae0-42c9-92ff-70d4eb64538c"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cost after step     1: 0.999118\n",
             "Cost after step     2: 0.998273\n",
@@ -288,10 +253,32 @@
             "Optimized phi:0.005000\n"
           ]
         }
+      ],
+      "source": [
+        "# initialise the optimizer\n",
+        "opt = qml.GradientDescentOptimizer(stepsize=0.1)\n",
+        "\n",
+        "# set the number of steps\n",
+        "steps = 20\n",
+        "# set the initial parameter values\n",
+        "params = init_params\n",
+        "\n",
+        "for i in range(steps):\n",
+        "    # update the circuit parameters\n",
+        "    params = opt.step(cost, params)\n",
+        "\n",
+        "    print(\"Cost after step {:5d}: {:8f}\".format(i + 1, cost(params)))\n",
+        "\n",
+        "print(\"Optimized mag_alpha:{:8f}\".format(params[0]))\n",
+        "print(\"Optimized phase_alpha:{:8f}\".format(params[1]))\n",
+        "print(\"Optimized phi:{:8f}\".format(params[2]))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EFN1mc8824HM"
+      },
       "source": [
         "The optimization converges after about 20 steps to a cost function value of zero.\n",
         "\n",
@@ -299,10 +286,32 @@
         "\n",
         "\n",
         "Next we will learn how to utilize the extensive plugin ecosystem of Pennylane, build continuous variable quantum nodes."
-      ],
-      "metadata": {
-        "id": "EFN1mc8824HM"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOXzUywhEI6EA0KtJqWmdod",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
