--- a/What_is_Quantum_Machine_Learning.ipynb
+++ b/What_is_Quantum_Machine_Learning.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMsDU5+w5JKL9UCFjNhoxkh",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/MonitSharma/Learn-Quantum-Machine-Learning/blob/main/What_is_Quantum_Machine_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,48 +12,51 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# What is Quantum Machine Learning?"
-      ],
       "metadata": {
         "id": "1E4Vn0jWPWUM"
-      }
+      },
+      "source": [
+        "# What is Quantum Machine Learning?"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wQx6GC9DPZxj"
+      },
       "source": [
         "Quantum machine learning is a research area that **explores the interplay of ideas from quantum computing and machine learning**\n",
         "\n",
         "For example, we might want to find out whether quantum computers can speed up the time it takes to train or evaluate a machine learning model. On the other hand, we can leverage techniques from machine learning to help us uncover quantum error-correcting codes, estimate the properties of quantum systems, or develop new quantum algorithms."
-      ],
-      "metadata": {
-        "id": "wQx6GC9DPZxj"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Ra8A9zg0PqlA"
+      },
       "source": [
         "## Quantum Computers as AI accelarators\n",
         "\n",
         "The limits of what machines can learn have always been defined by the computer hardware we run our algorithms on—for example, the success of modern-day deep learning with neural networks is enabled by parallel GPU clusters.\n",
         "\n",
         "**Quantum machine learning extends the pool of hardware for machine learning by an entirely new type of computing device—the quantum computer.** Information processing with quantum computers relies on substantially different laws of physics known as quantum theory.\n"
-      ],
-      "metadata": {
-        "id": "Ra8A9zg0PqlA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "![alt text](https://pennylane.ai/qml/_images/gpu_to_qpu.png)\n"
-      ],
       "metadata": {
         "id": "_avoabvQP3Qs"
-      }
+      },
+      "source": [
+        "![alt text](https://pennylane.ai/qml/_images/gpu_to_qpu.png)\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "oTfP2F8gQAdY"
+      },
       "source": [
         "## Machine Learning on near-term quantum devices\n",
         "\n",
@@ -80,13 +67,13 @@
         "Some research focuses on ideal, universal quantum computers (“fault-tolerant QPUs”) which are still years away. **But there is rapidly-growing interest in quantum machine learning on near-term [quantum devices](https://www.cornell.edu/video/john-preskill-quantum-computing-nisq-era-beyond)**.\n",
         "\n",
         "We can understand these deivces as special purpose hardware like Application-Specific Integrated Circuits (ASICs) and Field-Programmable Gate Arrays (FPGAs) which are more limited in their functonality"
-      ],
-      "metadata": {
-        "id": "oTfP2F8gQAdY"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "w8RWCSucQ6Hn"
+      },
       "source": [
         "### Quantum Devices as special-purpose AI accelarators\n",
         "\n",
@@ -94,13 +81,13 @@
         "\n",
         "An example of \"quantum ASIC\" is an integrated nanophotonics chip that implements Boson sampling for a fixed number of modes. Boson sampling quickly becomes intractable on classical computers if we increase number of modes.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "w8RWCSucQ6Hn"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "D-0-xCBSRVBb"
+      },
       "source": [
         "Many current quantum technologies resemble special-purpose hardware like **Application-Specific Integrated Circuits** (ASICs) rather than a general purpose CPU. They are hardwired to implement alimited class of quantum algorithms.\n",
         "\n",
@@ -119,13 +106,13 @@
         "\n",
         "----\n",
         "An ASIC is an integrated circuit chip customized for a particular use, rather than intended for general-purpose use. For example, a chip designed to run in a digital voice recoder or a high-efficiency video codec is an ASIC."
-      ],
-      "metadata": {
-        "id": "D-0-xCBSRVBb"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Zom3tzcfSTnA"
+      },
       "source": [
         "----\n",
         "More advanced quantum devices can be programmed to run simole quantum circuits, which makes them more similar to **Field-Programmable Gate Arrays** (FPGAs), integrated circuits that are programmed using a low-level, hardware-specific Hardware Description Langauge.\n",
@@ -138,13 +125,13 @@
         "\n",
         "\n",
         "----\n"
-      ],
-      "metadata": {
-        "id": "Zom3tzcfSTnA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "lK340fjSS-e1"
+      },
       "source": [
         "In both the cases, an intimate knowledge of the hardware design and limitations is needed to run effective algorithms.\n",
         "\n",
@@ -155,13 +142,13 @@
         "----\n",
         "----\n",
         "ASICs and FPGAs find growing use in machine learning and artificial intelligence, where their slim architectures reduce the overhead of a central processor and naturally suit the task they specialize in. If current quantum technologies resemble this classical special-purpose hardware, they could find applications in machine learning in a similar fashion. And this even without universal quantum computing and exponential quantum speedups."
-      ],
-      "metadata": {
-        "id": "lK340fjSS-e1"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ZshVG-THT89x"
+      },
       "source": [
         "## Using quantum computers like neural networks\n",
         "\n",
@@ -171,13 +158,13 @@
         "![alt text](https://pennylane.ai/qml/_images/trainable_circuit.png)\n",
         "\n",
         "For example, a trained circuit can be used to classify the content of images, by encoding the image into the physical state of the device and taking measurements."
-      ],
-      "metadata": {
-        "id": "ZshVG-THT89x"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YQoR9dutUO6I"
+      },
       "source": [
         "## The Bigger Picture : differentiable programming\n",
         "\n",
@@ -202,32 +189,29 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "YQoR9dutUO6I"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QY2andadVOFW"
+      },
       "source": [
         "![alt text](https://pennylane.ai/qml/_images/jigsaw.png)\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "QY2andadVOFW"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qTF1cv5tVSXI"
+      },
       "source": [
         "The source material is taken from Pennylane's website, they share amazing resources and visuals related to quantum computing and quantum machine leanring. Do check them out.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "qTF1cv5tVSXI"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -238,5 +222,21 @@
       "outputs": [],
       "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMsDU5+w5JKL9UCFjNhoxkh",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
