updated to qiskit 1.0.2

--- a/Quantum_gradients_with_backpropagation.ipynb
+++ b/Quantum_gradients_with_backpropagation.ipynb
@@ -432,7 +432,15 @@
         "id": "hDG0YAoSloRk",
         "outputId": "5b6dd7c9-849b-402e-cbdc-3982e50a1144"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gradient computation (best of 3): 2.714087370800553 sec per loop\n"
+          ]
+        }
+      ],
       "source": [
         "# create the gradient function\n",
         "grad_fn = qml.grad(circuit)\n",
@@ -454,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -467,7 +475,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "15.995919384002265\n"
+            "3.2989815000328235\n"
           ]
         }
       ],
@@ -503,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "h8RUd1UfmF5p"
       },
@@ -523,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -536,7 +544,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.9358535378025427\n"
+            "0.9586245064624955\n"
           ]
         }
       ],
@@ -563,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -576,7 +584,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Forward pass (best of 3): 0.08178746660000798 sec per loop\n"
+            "Forward pass (best of 3): 0.017080466699553654 sec per loop\n"
           ]
         }
       ],
@@ -601,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -614,7 +622,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Backward pass (best of 3): 0.20334364399998323 sec per loop\n"
+            "Backward pass (best of 3): 0.0504409332992509 sec per loop\n"
           ]
         }
       ],
@@ -646,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "3SmH9QNYnoxW"
       },
@@ -670,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "ayVm-Ll_ny1X"
       },
